2004-08-10  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c (refresh_under_cursor): do not refresh
	cursor rectangle with negative width or height
	(draw_cursor_rectangle): do not draw cursor rectangle with
	negative width or height

	Fixes (partialy) #62483

	* htmltable.c (calc_lowest_fill): return total filled size
	(divide_upto_preferred_width): fixed to divide the left space
	correctly and faster

	Fixes #62557

2004-08-05  Radek Doulik  <rodo@ximian.com>

	* htmlembedded.c (calc_min_width): calc min with for unrealized
	widgets as well, it's OK to call gtk_widget_size_request. for
	invissible widgets (hidden) return 0 minimal width

	Fixes #62088

2004-08-03  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (drag_data_received): do not use title from
	MOZILLA_URL in plaintext mode unless dnd context action >
	GDK_ACTION_COPY. this means that we paste url in plain text or
	title similar as in html mode if you press Shift or Meta Shift

	Fixes #59893

	* htmltext.c (html_text_set_style_in_range): avoid setting default
	font size

	Fixes #62086

2004-07-28  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: ref embedded widget when pushing it to the
	embedded stack and unref it when poping back

	Fixes #61997

2004-07-22  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (AM_CFLAGS, *dir, *_LDADD): Use GTKHTML_API_VERSION
	* gtkhtml.c (gtk_html_class_init): Use GTKHTML_RELEASE_STRING
	* libgtkhtml.pc.in: Use GTKHTML_API_VERSION for directory paths

2004-07-20  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-text.c (set_link): do not leak memory - free
	url, init url, target to NULL to quiet compiler

2004-07-19  Radek Doulik  <rodo@ximian.com>

	* htmlframe.c (html_frame_real_calc_size): as below

	* htmliframe.c (html_iframe_real_calc_size): do not queue size
	request to avoid infinite loop

	* htmlengine.c (html_engine_stream_end): queue resize after
	content is loaded

	* htmlembedded.c: set size of requisition to 0x0 before calling
	size request
